# ChangeLog for sys-libs/cracklib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/cracklib/ChangeLog,v 1.131 2009/03/17 10:13:35 armin76 Exp $

  17 Mar 2009; Raúl Porcel <armin76@gentoo.org> cracklib-2.8.13.ebuild:
  m68k stable wrt #258530, thanks to kolla for testing

  22 Feb 2009; Raúl Porcel <armin76@gentoo.org> cracklib-2.8.13.ebuild:
  arm/ia64/s390/sh stable wrt #258530

  15 Feb 2009; Markus Meier <maekke@gentoo.org> cracklib-2.8.13.ebuild:
  x86 stable, bug #258530

  14 Feb 2009; Brent Baude <ranger@gentoo.org> cracklib-2.8.13.ebuild:
  stable ppc, bug 258530

  13 Feb 2009; Ferris McCormick <fmccor@gentoo.org> cracklib-2.8.13.ebuild:
  Sparc stable, bug #258530.

  13 Feb 2009; Thomas Anderson <gentoofan23@gentoo.org>
  cracklib-2.8.13.ebuild:
  stable amd64, bug 258530

  12 Feb 2009; Brent Baude <ranger@gentoo.org> cracklib-2.8.13.ebuild:
  stable ppc64, bug 258530

  12 Feb 2009; Jeroen Roovers <jer@gentoo.org> cracklib-2.8.13.ebuild:
  Stable for HPPA (bug #258530).

  11 Feb 2009; Tobias Klausmann <klausman@gentoo.org>
  cracklib-2.8.13.ebuild:
  Stable on alpha, bug #258530

  16 Nov 2008; Mike Frysinger <vapier@gentoo.org>
  +files/cracklib-2.8.13-python-linkage.patch, cracklib-2.8.13.ebuild:
  Link python module against python #246747 by Robert Wohlrab.

*cracklib-2.8.13 (24 Sep 2008)

  24 Sep 2008; Mike Frysinger <vapier@gentoo.org> +cracklib-2.8.13.ebuild:
  Version bump.

  24 Feb 2008; Mike Frysinger <vapier@gentoo.org> cracklib-2.8.12.ebuild:
  Add workaround for FEATURES=unmerge-orphans and upgrading from older
  versions #195017 by Pacho Ramos.

  14 Feb 2008; Jeroen Roovers <jer@gentoo.org> cracklib-2.8.12.ebuild:
  Stable for HPPA (bug #209064).

  11 Feb 2008; Santiago M. Mola <coldwind@gentoo.org>
  cracklib-2.8.12.ebuild:
  amd64 stable wrt bug #209064

  10 Feb 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  cracklib-2.8.12.ebuild:
  ppc stable, bug #209064
