@@ -1,8 +1,6 @@
 AUX cracklib-2.8.12-interix.patch 439 RMD160 219258b331a791b8bfb8bd738c45824241b1dfe4 SHA1 60b3eefe8d4810c70115d912525154c9caaedee0 SHA256 67f665dff3879b6e534bcc47033e2a47c20ecc8143039bb8617a45238623badb
 AUX cracklib-2.8.13-python-linkage.patch 508 RMD160 fc6123093212c60c0d6de98a0b7390b52274ed28 SHA1 3514a018563e0848cdd9aa2625b7e003e875af8e SHA256 0958a6ce7ff7b89bb374281b0bd416af275d9f052d83d4fac493bee22aaa51f0
-DIST cracklib-2.8.12.tar.gz 585981 RMD160 91649e66c3ce491b2ebea6135eaa6ba4705ffb58 SHA1 0a77b21366cfbad675e6e44642026c89b87f41ce SHA256 50d55cc6e541324533f67d2668fd87a84d29805ddf379286de7302044f563351
 DIST cracklib-2.8.13.tar.gz 593050 RMD160 948b02e6a74dfc94192f6f6ce9e3fc733d7a92f4 SHA1 e107d0a14c09aea9c63c18840db8b94b972b5315 SHA256 0a06caff3626c397d023f0c19efedfea295180c2c5ba2def57016a17e158041a
-EBUILD cracklib-2.8.12.ebuild 1801 RMD160 62b600cb035b0b14d17479641eb2e7909c961707 SHA1 e88732f37817ac1e781876152f5031f0b7bd1921 SHA256 74eaf2a9398a32278d4a07d39ffc5154e21f8db259bcda17ea3e56caa6661518
-EBUILD cracklib-2.8.13.ebuild 1943 RMD160 5a7b6305ad4f4aa3823b6ddbad52663b283f08c7 SHA1 87a47944c96d38ed8c185cb12d9b9cb1d82f7b6b SHA256 0490ca5b3d3f5978b45f8ba96f0be13e1f6fdd17e4e31c4963aea96abbe91d48
-MISC ChangeLog 16495 RMD160 9f3056bd4c2fb996dc342f8b6bcf84a12d5b24b4 SHA1 78c42de5dd3ceb5fecfe50699df7636ec1f020e1 SHA256 7846abaa9e4bbfd2182fddf6761acb2d50f058dbc5950241d6d51de5b845bcd8
+EBUILD cracklib-2.8.13.ebuild 1971 RMD160 e1a8a4c1e60383bd21dcdc379185ba0a19a88c39 SHA1 d016614fb6035b7f761b70202768071520031cc5 SHA256 fae195c07d54084bf35f8a95406da484926a7bd1a744107a428c8d0d4d27bc86
+MISC ChangeLog 16612 RMD160 e8f9cb988acf3db15b768b267fc95b4fc7d98f85 SHA1 32a87a9656a38aec1d6d3df0361723373f7ceba1 SHA256 21b74fb62f822447673d1e73697e4e2da43dea596d5e477744657206b0b6842a
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
